<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.match.developer.ui.AddRecordActivity">

    <LinearLayout
        android:padding="@dimen/dimen16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>

        <EditText
            android:id="@+id/id_add_money"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money_hint"
            android:textColorHint="@color/gray"/>


    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/dimen16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>

        <EditText
            android:id="@+id/id_add_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe_hint"
            android:textColorHint="@color/gray"/>


    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/dimen16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_type"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_weight="1"
                android:id="@+id/id_add_type_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/type_food"/>

            <RadioButton
                android:layout_weight="1"
                android:id="@+id/id_add_type_wen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/type_wen"/>
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/id_add_in"
            android:background="@color/green"
            android:text="@string/add_income"
            android:layout_margin="@dimen/dimen16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/id_add_out"
            android:layout_margin="@dimen/dimen16"
android:text="@string/add_expenditure"
            android:background="@color/red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
