<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg"
    android:gravity="center"
    tools:context="com.match.developer.ui.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen30"
                android:layout_height="@dimen/dimen30"
                android:src="@drawable/icon_user"/>

            <EditText
                android:id="@+id/id_login_username"
                android:layout_width="@dimen/dimen250"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_name_phone"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/dimen16"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dimen30"
                android:layout_height="@dimen/dimen30"
                android:src="@drawable/icon_lock"/>

            <EditText
                android:id="@+id/id_login_password"
                android:layout_width="@dimen/dimen250"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_pwd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/dimen16"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/id_login_login"
            android:layout_width="@dimen/dimen250"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen16"
            android:background="@drawable/shape_stroke"
            android:gravity="center"
            android:padding="@dimen/dimen16"
            android:text="@string/login"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>
